syntax = "proto3";

package tritontube;

option go_package = "internal/proto;proto";

service NetworkVideoContent {
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Write(WriteRequest) returns (WriteResponse);
    rpc List(ListRequest) returns (ListResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message ReadRequest {
    string file_id = 1;
}

message ReadResponse {
    bytes data = 1;
}

message WriteRequest {
    string file_id = 1;
    bytes data = 2;
}

message WriteResponse {}

message ListRequest {}

message ListResponse {
    repeated string file_ids = 1;
}

message DeleteRequest {
    string file_id = 1;
}

message DeleteResponse {}